# dragonbox

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
chart/: performance.tex
src/: buffer.rs  cache.rs  div.rs  lib.rs  log.rs  policy.rs  to_chars.rs  wuint.rs
tests/: binary64_test.rs
tests/crate/: Cargo.toml
