[package]
name = "dragonbox"
version = "0.1.6" # don't forget to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["value-formatting", "no-std", "no-std::no-alloc"]
description = "Fast floating point to string conversion"
documentation = "https://docs.rs/dragonbox"
edition = "2018"
exclude = ["performance.png", "chart/**"]
keywords = ["float"]
license = "Apache-2.0 WITH LLVM-exception OR BSL-1.0"
repository = "https://github.com/dtolnay/dragonbox"
rust-version = "1.51"

[dev-dependencies]
rand = "0.8"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
